syntax = "proto3";
package bounce;

message BounceRequest { bytes message = 1; }

message BounceResponse {
  bytes aggregate_public_key = 1;
  bytes aggregate_signature = 2;
}

service BounceSatellite { rpc Bounce(BounceRequest) returns (BounceResponse); }

message BounceConfig {
    uint32 num_cubesats = 1;
    // durations are in seconds
    uint32 slot_duration = 2;
    uint32 phase1_duration = 3;
    uint32 phase2_duration = 4;
}